Created main.js, added functionality to the login page and connected it to index.

--- a/index.html
+++ b/index.html
@@ -3,47 +3,44 @@
  <head>
  	<meta charset="UTF-8">
  	<title>Login & Register</title>
+	<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+	
  	<link rel="stylesheet" href="main.css">
  </head>
  <body>
  	<div class="login_reg_panel">
  		<div class="login_info_box">
  			<h2>Have an account?</h2>
- 			<p>
- 				Lorem ipsum dolor sit amet.
- 				</p>
- 			<label for="" id="label_register"></label>
+ 			<p>Lorem ipsum dolor sit amet.</p>
+ 			<label id="label_register" for="log_reg_show">Login</label>
  			<input type="radio" name="active_log_panel" id="log_reg_show" checked="checked">
  		</div>
- 		<div class="reigister_info_box">
- 			
+ 		<div class="register_info_box">
  			<h2>Don't have an account?</h2>
- 			<p>
- 				Lorem ipsum dolor sit amet.
- 			</p>
- 			<label for="log_login_show" id="label_login">Register</label>
+ 			<p>Lorem ipsum dolor sit amet.</p>
+ 			<label id="label_login" for="log_login_show">Register</label>
  			<input type="radio" name="active_log_panel" id="log_login_show">
  		</div>
 
  		<div class="white_panel">
  			<div class="login_show">
- 				<h2>Login</h2>
+ 				<h2>LOGIN</h2>
  				<input type="text" placeholder="Email">
  				<input type="password" placeholder="Password">
  				<input type="button" value="Login">
  				<a href="">Forgot Password?</a>
  			</div>
  			<div class="register_show">
- 				<h2>Register</h2>
+ 				<h2>REGISTER</h2>
  				<input type="text" placeholder="Email">
  				<input type="password" placeholder="Password">
  				<input type="password" placeholder="Confirm Password">
  				<input type="button" value="Register">
-
  			</div>
  		</div>
  	</div>
 
 
+	<script type="text/javascript" src="main.js"></script>
  </body>
  </html> 
